--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secondary-bg">
         <nav>
             <h3 class="nav-title">Ma<span class="primary">r</span>y</h3>
             <ul>
@@ -37,10 +37,144 @@
     </header>
    
     <main>
+        <section class="about secondary-bg">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci vel sunt animi laboriosam aliquam atque consequuntur rem libero dolorum ipsa, sint iusto dolorem quod sed harum deleniti. Magni, laborum eveniet.
+            </p>
+            <div class="about-items">
+                <div class="about-item">
+                    <p class="item-title">Name</p>
+                    <p class="item-description--">Mary hardy      </p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email</p>
+                    <p class="item-description--">abc@wjjojd.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Date of birth</p>
+                    <p class="item-description--">23 oct 2003</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">from</p>
+                    <p class="item-description--">Dhaka</p>
+                </div>
+            </div>
 
+        </section>
+        <section class="skills">
+            <h3 class="section-title text-center">What I do</h3>
+            <p class="section-description text-center">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima molestiae harum voluptas alias adipisci ipsa possimus dolor autem repellat iste eos at tempora praesentium, modi facere architecto dolorem. Porro, labore!
+            </p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="javascript">
+                    <h4 class="skill-title">Vanilla JavaScript</h4>
+                    <p class="skill-description--">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. Doloribus, cumque. Quasi, asperiores. Doloremque, cumque. Doloribus, cumque. Quasi, asperiores. Doloremque, cumque.
+                    </p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h4 class="skill-title">React</h4>
+                    <p class="skill-description--">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident optio alias hic, beatae amet pariatur, eum mollitia quaerat quis sequi vel sint reprehenderit fugit praesentium? Id labore deleniti voluptate culpa.
+                    </p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h4 class="skill-title">NodeJS</h4>
+                    <p class="skill-description--">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus nesciunt perspiciatis odit quas. Veniam eos praesentium beatae odit excepturi assumenda omnis rem ullam nulla, quos, consequatur, dolores qui amet perferendis!
+                    </p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h4 class="skill-title">MongoDB</h4>
+                    <p class="skill-description--">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea tempora laudantium dolorum, accusantium veritatis hic neque ratione, laborum architecto similique dolor corrupti sit asperiores repellendus, assumenda voluptatem expedita illum libero!
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="resume">
+            <h3 class="section-title text-center">Summary of My resume</h3> 
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">MSc in CSE</h4>
+                        <h5 class="experience-sub-title">Harvard</h5>
+                        <div class="experience-description--">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">BSc in CSE</h4>
+                        <h5 class="experience-sub-title">Harvard</h5>
+                        <div class="experience-description--">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Phd in CSE</h4>
+                        <h5 class="experience-sub-title">MIT</h5>
+                        <div class="experience-description--">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Sr. Font End Developer</h4>
+                        <h5 class="experience-sub-title">Apple Inc / 2020 - Current</h5>
+                        <div class="experience-description--">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Jr. Font End Developer</h4>
+                        <h5 class="experience-sub-title">Apple Inc / 2020 - Current</h5>
+                        <div class="experience-description--">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Jr. Font End Developer</h4>
+                        <h5 class="experience-sub-title">Apple Inc / 2020 - Current</h5>
+                        <div class="experience-description--">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center resume-download-cv">
+                <button class="btn-primary">Download CV</button>
+            </div>
+        </section>
     </main>
-    <footer>
-
+    <footer class="secondary-bg">
+        <div class="footer-column">
+            <h3 class="section-title">Lets Connect</h3>
+            <p>dinofnonsafousfbosfosabfousbofubsaobfoab
+                osajbfoasjbfobsfoubasf
+                fadojbfoajs
+            </p>
+            <div>
+               <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>  
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Let's Inbox Me</h3>
+            <form action="">
+               <input type="text" name="" id="" placeholder="Your Name">
+                <input type="email" name="" id="" placeholder="Your Email">
+                <textarea name="" id="" cols="30" rows="20" placeholder="Message">Message</textarea>
+                <input class="btn-primary"type="button" value="Submit">
+            </form>
+        </div>
     </footer>
 
 </body>
